--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API=https://nestjs.gapasil.repl.co/
+REACT_APP_APIDep=https://nestjs.gapasil.repl.co/
+REACT_APP_API=http://localhost:3000/
