--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_APIDep=https://nestjs.gapasil.repl.co/
-REACT_APP_API=http://localhost:3000/
+REACT_APP_API=https://nestjs.gapasil.repl.co/
